test/spec_vectors/table_fill/fail/module_1.wat
(module (table $t 10 externref) (func $type-index-value-length-empty-vs-i32-i32 (table.fill $t)))